# chosen

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_SETUP.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.local.json
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: add-issues-to-project.yml  add-prs-to-project.yml  claude-code-review.yml  project-automation.yml  test.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  model_router.py
backend/app/core/: exceptions.py
backend/app/data/: __init__.py  file_handler.py  repository_base.py  yaml_handler.py
backend/app/models/: __init__.py  analysis.py  conversation.py  enums.py  message.py  metrics.py  participant.py  settings.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/data/: test_file_handler_integration.py  test_yaml_handler_integration.py
backend/tests/integration/models/: __init__.py  test_yaml_serialization.py
backend/tests/unit/: test_health.py
backend/tests/unit/agents/: test_model_router.py
backend/tests/unit/data/: __init__.py  test_file_handler.py  test_repository_base.py  test_yaml_handler.py
backend/tests/unit/models/: __init__.py  test_analysis_models.py  test_conversation.py  test_enums.py  test_job_fit_score.py  test_message.py  test_participant.py  test_path_validation.py  test_response_metrics.py  test_user_settings.py
docs/: DEV-PLAN.md  INTERFACE-DESIGN.md  SYSTEM-DESIGN.md  requirements.md
docs/planning/: RISKS.md
scripts/: setup.ps1  setup.sh
